--- a/LLama.Web/wwwroot/css/site.css
+++ b/LLama.Web/wwwroot/css/site.css
@@ -4,6 +4,42 @@
     font-display: swap;
 }
 
+:root {
+    --ls-dark-purple: #661F76;
+    --ls-light-purple: #865FC5;
+    --ls-light-blue: #3FC6EE;
+    --ls-grey-1: #101010;
+    --ls-grey-2: #202020;
+    --ls-grey-4: #404040;
+    --ls-grey-8: #808080;
+    --ls-grey-13: #d0d0d0;
+    --ls-grey-15: #f0f0f0;
+    --ls-sidebar-bg: var(--ls-grey-15);
+    --ls-sidebar-text: var(--ls-grey-1);
+}
+
+[data-bs-theme=dark] {
+    --bs-body-bg: var(--ls-grey-2); /* Override bootstrap */
+    --ls-sidebar-bg: var(--ls-grey-1);
+    --ls-sidebar-text: white;
+}
+
+    /*
+        It's terrible that I have to do this, bootstrap seems to only provide one variable
+       --bs-body-bg that is used for the background colour for all html, body tags as well as inputs fields.
+    */
+    [data-bs-theme=dark] .accordion,
+    [data-bs-theme=dark] .accordion-item,
+    [data-bs-theme=dark] .accordion-header,
+    [data-bs-theme=dark] .accordion-button,
+    [data-bs-theme=dark] .form-control,
+    [data-bs-theme=dark] .form-select,
+    [data-bs-theme=dark] .form-floating,
+    [data-bs-theme=dark] .form-control label::after,
+    [data-bs-theme=dark] .form-floating label::after {
+        background-color: var(--ls-grey-2) !important;
+    }
+
 html, body {
     font-size: 14px;
     height: 100%;
@@ -17,26 +53,61 @@ main {
     overflow: auto;
 }
 
-footer {
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px;
-}
-
-
 @media (min-width: 768px) {
     html {
         font-size: 16px;
     }
 }
 
+/* Scrollbars */
 #scroll-container {
     flex: 1;
     overflow-y: auto;
     border-radius: var(--bs-border-radius);
 }
 
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--ls-grey-13);
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--ls-grey-8);
+    }
+
+[data-bs-theme=dark] ::-webkit-scrollbar-thumb {
+    background-color: var(--ls-grey-4);
+}
+
+    [data-bs-theme=dark]
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--ls-grey-8);
+    }
+
+/* Navs */
+#sidebar {
+    background-color: var(--ls-sidebar-bg);
+    color: var(--ls-sidebar-text);
+}
+
+    #sidebar .sidebar-image {
+        height: 30px;
+    }
+
+    #sidebar a {
+        color: var(--ls-sidebar-text);
+    }
+
+/* Forms */
 .slider-container > .slider {
     width: 100%;
 }
@@ -50,28 +121,33 @@ footer {
     height: 100px;
 }
 
-.navbar-image {
-    height: 30px;
-    margin-left: 5px;
-    margin-right: 10px;
+.input-control-wrapper {
+    padding: 0;
+    border-radius: 20px;
+    display: flex;
 }
 
-.nav-item.theme {
-    margin-top: 2px;
+    .input-control-wrapper .unload {
+        padding-inline: 10px;
+        padding-top: 3px;
+        cursor: pointer;
+    }
+
+    .input-control-wrapper i {
+        font-size: 25px;
+        padding-inline: 10px;
+        padding-top: 3px;
+        cursor: pointer;
+    }
+
+#input {
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    padding-inline: 20px;
 }
 
-/* Dark theme values */
-[data-bs-theme=dark] #scroll-container {
-    background-color: #202020;
-}
-
-[data-bs-theme=dark] html,
-[data-bs-theme=dark] body,
-[data-bs-theme=dark] #sidebar,
-[data-bs-theme=dark] header {
-    background-color: #191919;
-}
-
+/* Session content */
 .entry {
     padding-top: 10px;
     padding-bottom: 20px;
@@ -89,11 +165,11 @@ footer {
         margin-left: 50px;
     }
 
-        .entry .entry-header .participant {
-            font-weight: bold;
-            font-size: 1.4em;
-            padding-bottom: 5px;
-        }
+    .entry .entry-header .participant {
+        font-weight: bold;
+        font-size: 1.4em;
+        padding-bottom: 5px;
+    }
 
         .entry .entry-header .participant .participant-icon {
             display: inline-block;
@@ -104,3 +180,41 @@ footer {
         .entry .entry-header .participant .participant-name {
             display: inline-block;
         }
+
+pre {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #efefef;
+}
+
+
+[data-bs-theme=dark] pre {
+    border: 1px solid #444;
+    background-color: var(--ls-grey-1);
+}
+
+.session-parameters .input-group-text {
+    font-size: 1em;
+}
+
+.session-parameters .btn-primary {
+    background-color: var(--ls-dark-purple);
+    border-color: var(--ls-light-purple);
+}
+
+.lead strong {
+    color: var(--ls-light-blue);
+}
+
+@media (min-width: 992px) {
+    .border-lg-start {
+        border-left: var(--bs-border-width) solid var(--bs-border-color);
+    }
+}
+
+@media (min-width: 1200px) {
+    .bd-masthead h1 {
+        font-size: 4rem;
+    }
+}
