--- a/LLama.Web/Pages/Shared/_Layout.cshtml
+++ b/LLama.Web/Pages/Shared/_Layout.cshtml
@@ -6,13 +6,28 @@
     <title>LLamaSharp Web</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/LLama.Web.styles.css" asp-append-version="true" />
     <link rel="icon" href="~/image/llama-sharp.png" sizes="32x32" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <main class="d-flex flex-nowrap" role="main">
-        @RenderBody()
+        @Html.AntiForgeryToken()
+
+        <div class="d-flex flex-row w-100 h-100 overflow-hidden">
+
+            @{
+                await Html.RenderPartialAsync("_Sidebar");
+            }
+
+            <div class="container overflow-auto p-5">
+                @RenderBody()
+            </div>
+
+        </div>
+
+        @{
+            await Html.RenderPartialAsync("_ChatTemplates");
+        }
     </main>
 
     <script src="~/lib/jquery/jquery.min.js"></script>
