--- a/LLama.Web/Pages/_SessionOptionsModal.cshtml
+++ b/LLama.Web/Pages/_SessionOptionsModal.cshtml
@@ -8,7 +8,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                @{ await Html.RenderPartialAsync("_SessionOptions"); }
+                @{
+                    await Html.RenderPartialAsync("_SessionOptions");
+                }
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
